--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,14 @@ edition = "2018"
 
 [dependencies]
 heim = {version = "0.1.0-rc.1", features = ["full"] }
-#heim-common = "0.0.11"
-#heim = "0.0.11"
 futures = "~0.3"
 futures-timer = "~3.0"
+futures-ticker = "0.0.1"
 local_ipaddress = "0.1.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.62"
-async-std = { version = "~1.7", features = ["attributes"] }
+toml = "0.5.8"
+actix-web = "3"
+env_logger = "0.8"
+reqwest = { version = "0.11", features = ["json", "blocking"] }
+async-std = "1.9"
