--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,17 @@
 [sys]
+# 获取 CPU 使用率时，出于准确性的考虑，建议的延迟至少应为100 ms
 timer = 100
 
 [http]
+# HTTP 服务绑定的 IP，非本地访问时设置为`0.0.0.0`
 bind = "127.0.0.1"
+# HTTP 服务绑定的端口
 port = 8080
 
 [notification]
+# 是否启用回调通知
 enable = true
+# 回调地址
 url = "http://www.httpbin.org/post"
+# 间隔时间
 interval = 5000
