--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,5 @@ serde_json = "1.0.62"
 toml = "0.5.8"
 actix-web = "3"
 env_logger = "0.8"
-reqwest = { version = "0.11", features = ["json", "blocking"] }
+reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"], default-features = false }
 async-std = "1.9"
