--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,5 @@ actix-web = "3"
 env_logger = "0.8"
 reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"], default-features = false }
 async-std = "1.9"
+machineid-rs = { git = "https://github.com/tjz101/machineid-rs.git" }
+md5 = "0.7.0"
